--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,9 +14,12 @@ jobs:
       push:
         default: false
         type: boolean
+      tags:
+        default: ""
+        type: string
     environment:
       KO_VERSION: "0.15.1"
-      KO_DOCKER_REPO: "$DOCKER_LOGIN"
+      KO_DOCKER_REPO: "ghcr.io/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME"
       KOCACHE: "1"
     steps:
       - checkout
@@ -27,34 +30,35 @@ jobs:
             "https://github.com/ko-build/ko/releases/download/v${KO_VERSION}/ko_${KO_VERSION}_Linux_x86_64.tar.gz" \
             | tar -xz -C ~/bin/
       - run:
-          name: Docker Hub Auth
-          command: echo "${DOCKER_PASSWORD}" | ko login docker.io -u "${DOCKER_LOGIN}" --password-stdin
-      - run:
           name: Build Container
           command: >-
             ko build
             --base-import-paths
             --platform=all
-            <<^ parameters.push >> --push=false <</ parameters.push >>
-            --tags="${CIRCLE_TAG:-${CIRCLE_BRANCH:-test}},latest"
+            <<^ parameters.push >> --local <</ parameters.push >>
+            --tags="<< parameters.tags >>"
             .
 
 workflows:
   continuous:
     jobs:
       - ko-build:
-          context: DockerHub
+          context: github
       - semantic-release/with_minimal_github_config:
           name: semantic-release
+          context: github
           filters:
             branches:
               only:
                 - main
+          requires:
+            - ko-build
   tags:
     jobs:
       - ko-build:
-          context: DockerHub
+          context: github
           push: true
+          tags: "$CIRCLE_TAG,latest"
           filters:
             branches:
               ignore: /.*/
