build: fix container repo name

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,21 +17,22 @@ jobs:
       tags:
         default: ""
         type: string
-    environment:
-      KO_VERSION: "0.15.1"
-      KO_DOCKER_REPO: "ghcr.io/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME"
-      KOCACHE: "1"
     steps:
       - checkout
       - run:
           name: Install KO
+          environment:
+            KO_VERSION: "0.15.1"
           command: |
             curl -sSfL \
             "https://github.com/ko-build/ko/releases/download/v${KO_VERSION}/ko_${KO_VERSION}_Linux_x86_64.tar.gz" \
             | tar -xz -C ~/bin/
       - run:
           name: Build Container
+          environment:
+            KOCACHE: "1"
           command: >-
+            KO_DOCKER_REPO="ghcr.io/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME"
             ko build
             --base-import-paths
             --platform=all
