--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,7 @@ jobs:
           race: true
       - go/install-goreleaser
       - go/goreleaser-release:
+          project-path: $CIRCLE_WORKING_DIRECTORY
           publish-release: << parameters.push >>
           validate-yaml: true
 
