--- a/testdata/config.yaml
+++ b/testdata/config.yaml
@@ -1,4 +1,4 @@
 ---
 files:
-  - source: https://example.com/stuff.txt
-    dest: /tmp/stuff.txt
+  - source: https://example.com/index.html
+    dest: /tmp/example-index.html
