--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -56,3 +56,9 @@ changelog:
     exclude:
       - "^docs:"
       - "^test:"
+
+release:
+  draft: true
+  replace_existing_draft: true
+  prerelease: auto
+  mode: append
